--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,10 @@
-.App {
-  text-align: center;
+.AppRoot {
+  text-align: left;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.MenuBar {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,8 +13,12 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Name {
+  text-align: center;
+}
+
+.Title {
+  text-align: left;
 }
 
 @keyframes App-logo-spin {
